# toys

./: .clang-format  .gitignore  .gitmodules  LICENSE  README  README.md  simple_voxel_tracer.py
btrfs/: btrfs-auto-backup.py  btrfs-auto-backup.service
btrfs-backup-scripts/: btrfs-auto-backup.py  btrfs-auto-backup.timer
crepl/: CMakeLists.txt  README  TODO  common.h  main.c  stat.c  stat.h
dotfiles/alacritty/: alacritty.yml
dotfiles/i3/: config
dotfiles/picom/: picom.conf
dotfiles/swap/: swap.sh  swap_capsesc.service
dotfiles/vim/: .vimrc
dotfiles/vim/nvim/UltiSnips/: tex.snippets
eigenfaces/: .gitignore
kproxy/: Cargo.toml  rustfmt.toml
kproxy/src/: auth.rs  config.rs  main.rs
pbf3d/: CMakeLists.txt  README.md
pbf3d/libs/include/: stb_image.h
pbf3d/libs/src/: glad.c
pbf3d/samples/: random.cpp  random_gravity.cpp
pbf3d/src/: CMakeLists.txt  common.cpp  common.hpp  compact_hash.cpp  compact_hash.hpp  gui.cpp  gui.hpp  main.cpp  particle.cpp  particle.hpp  pbd.cpp  pbd.hpp  shader.cpp  shader.hpp
pbf3d/tests/: CMakeLists.txt  compact_hash_correctness.cpp  pbd_solver_correctness.cpp
pfs.py/: .gitignore  main.py
sakuranotoki/: block.py  core.cpp  trans.py
scripts/: disable_zram.sh  enable_zram.sh  update_clash.sh  update_pdf.sh
settings/alacritty/: .alacritty.yml
settings/btrfs-backup-scripts/: btrfs-snapshot-home.service
settings/clang-format/: .clang-format
settings/i3/: config
settings/vim/: .vimrc
sperf/: CMakeLists.txt  main.c
